--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
     "jest-mock-extended": "^2.0.7",
+    "jsonwebtoken": "^9.0.0",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^28.1.8",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
