--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "axios": "^1.3.6",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -21,6 +22,7 @@
     "inversify-express-utils": "^6.4.3",
     "jest-mock-extended": "^2.0.7",
     "jsonwebtoken": "^9.0.0",
+    "node-cron": "^3.0.2",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@types/jest": "^28.1.8",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.7.13",
+    "@types/node-cron": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.22.0",
