--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Donny Roufs",
   "scripts": {
     "dev": "ts-node-dev --respawn  src/bootstrap.ts",
+    "teste": "nodemon",
     "test": "jest",
     "build": "tsc",
     "test:watch": "jest --watch --verbose",
@@ -23,7 +24,8 @@
     "jest-mock-extended": "^2.0.7",
     "jsonwebtoken": "^9.0.0",
     "node-cron": "^3.0.2",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -39,8 +41,10 @@
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "lint-staged": ">=13",
+    "nodemon": "^2.0.22",
     "prettier": "^2.7.1",
     "prisma": "^4.11.0",
+    "sucrase": "^3.32.0",
     "ts-jest": "^28.0.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
