add command start on scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "forceConsistentCasingInFileNames": true,
     "strictPropertyInitialization": false,
     "strictNullChecks": true,
-    "allowJs": false,
-  },
+    "allowJs": false
+  }
 }
