--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "bootstrap.ts",
   "author": "Donny Roufs",
   "scripts": {
-    "dev": "ts-node-dev --respawn  src/bootstrap.ts",
+    "dev": "ts-node-dev --respawn  src/index.ts",
+    "start": "node dist/index.js",
     "teste": "nodemon",
     "test": "jest",
     "build": "tsc",
