--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-error": "^0.0.2",
+    "express-async-errors": "^3.1.1",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
     "jest-mock-extended": "^2.0.7",
     "jsonwebtoken": "^9.0.0",
     "node-cron": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
