change character migrate

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,5 +5,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "extends": ["plugin:@typescript-eslint/recommended", "standard"],
-  "rules": {}
+  "rules": {
+    "semi": "off"
+  }
 }
