--- a/package.json
+++ b/package.json
@@ -16,18 +16,25 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "aws-sdk": "^2.1386.0",
     "axios": "^1.3.6",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-error": "^0.0.2",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^6.7.0",
+    "fs": "^0.0.1-security",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
     "jest-mock-extended": "^2.0.7",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.0",
+    "mime": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "uuid": "^9.0.0",
     "yup": "^1.1.1",
     "zod": "^3.21.4"
   },
@@ -36,9 +43,12 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^28.1.8",
+    "@types/json2csv": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.13",
     "@types/node-cron": "^3.0.7",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.22.0",
