--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "app",
-  "version": "0.0.0",
-  "main": "bootstrap.ts",
-  "author": "Donny Roufs",
+  "name": "api-naruto",
+  "author": "João Tavares",
+  "version": "1.0.0",
   "scripts": {
     "dev": "ts-node-dev --respawn  src/index.ts",
+    "watch": "tsx watch src/index.ts",
     "start": "node dist/index.js",
-    "teste": "nodemon",
     "test": "jest",
-    "build": "tsc",
-    "test:watch": "jest --watch --verbose",
-    "lint": "eslint . --ext .ts",
-    "prepare": "husky install"
+    "build": "tsc"
   },
   "license": "MIT",
   "dependencies": {
+    "@json2csv/plainjs": "^7.0.0",
     "@prisma/client": "^4.11.0",
     "aws-sdk": "^2.1386.0",
     "axios": "^1.3.6",
@@ -62,12 +59,5 @@
     "ts-jest": "^28.0.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "yarn eslint",
-      "yarn prettier --write",
-      "yarn test --watchAll=false --findRelatedTests --bail"
-    ]
   }
 }
