add /character and /cla on swagger doc and update read.me

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "forceConsistentCasingInFileNames": true,
     "strictPropertyInitialization": false,
     "strictNullChecks": true,
-    "allowJs": false
+    "allowJs": false,
+    "resolveJsonModule": true
   }
 }
