--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0",
     "yup": "^1.1.1",
     "zod": "^3.21.4"
@@ -45,6 +46,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.13",
     "@types/node-cron": "^3.0.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
